--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,12 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-body {
-}
+
 .logo {
   width: 45%;
   margin-left: 15px;
 }
 
-.navbar {
-}
 .navbar div {
   margin: 7px;
 }
@@ -26,23 +23,15 @@ body {
   color: rgb(47, 136, 199);
 }
 .headerbg {
-  background-image: url("../image/banner_bg.jpg.webp");
-  height: 800px;
-
+  background-image: linear-gradient(rgba(2, 0, 20, 0.5), rgba(20, 4, 0, 0.5)),
+    url(../image/banner_bg.jpg.webp);
+  height: 100vh;
   width: 100%;
-  /* height: 100%; */
-  position: absolute;
   background-size: cover;
+  overflow: hidden;
   position: relative;
 }
-.banner-backgrund {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(2, 0, 20, 0.5);
-}
+
 .navbar-toggler span {
   display: block;
   width: 25px;
@@ -54,22 +43,14 @@ body {
   cursor: pointer;
 }
 .banner_content {
-  /* position:relative; */
-
-  /* margin: auto; */
   width: 100%;
   height: 100%;
-  /* height: 400px; */
-  overflow: hidden;
 }
 .hedcontetnt {
-  /* position: absolute;
-    top: 40%; */
   margin-top: 15%;
   width: 100%;
   color: white;
   height: 250px;
-  /* background-color: aquamarine; */
 }
 .banner_content h6 {
   font-size: 14px;
@@ -101,20 +82,34 @@ body {
   font-weight: 600;
   background: #f3c300;
   padding: 5px 30px;
-  opacity: 0.9;
-}
-.banner_content a:hover {
   opacity: 1;
-  color: white;
+}
+
+.hvr-sweep-to-right:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fcdd61;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
 }
 
 .boking-form {
   width: 100%;
-  /* margin: auto; */
-  /* height: 300px; */
-  /* height: 100%; */
-  /* position: absolute; */
-  /* bottom: 0px; */
+  position: absolute;
+  bottom: 0;
   background: #04091e;
   padding: 40px 50px 30px;
 }
@@ -129,11 +124,13 @@ body {
   padding-left: 70px;
 }
 .boking-form form {
-  /* padding-top: 70px; */
   margin-left: 20px;
 }
+.boking-form form a:hover {
+  color: #000;
+}
 .boking-form form input {
-  padding:8px;
+  padding: 8px;
   margin: 10px;
   margin-left: 20px;
   width: 260px;
@@ -141,14 +138,14 @@ body {
   border: 1px solid gray;
   color: gray;
 }
-.boking-form form select{
-    padding:5px;
-    margin: 10px;
-    margin-left: 20px;
-    width: 260px;
-    background-color: #04091e;
-    border: 1px solid gray;
-    color: gray;
+.boking-form form select {
+  padding: 5px;
+  margin: 10px;
+  margin-left: 20px;
+  width: 260px;
+  background-color: #04091e;
+  border: 1px solid gray;
+  color: gray;
 }
 
 .boking-form form a {
@@ -162,7 +159,143 @@ body {
   color: #000;
   opacity: 0.9;
 }
-.boking-form form a:hover {
-  color: white;
-  opacity: 1;
+
+
+.room-section {
+  margin-top: 100px;
+}
+.room-section .title h1 {
+  font-size: 36px;
+  line-height: 45px;
+  font-weight: 600;
+  color: #222222;
+}
+
+.room-section .title p {
+  font-size: 14px;
+  line-height: 30px;
+  color: #777;
+  margin-bottom: 0;
+}
+.imge-room {
+  /* padding-left: 20px 0px; */
+  border-radius: 10px;
+
+  position: relative;
+  overflow: hidden;
+}
+
+
+.imge-room img {
+  transition: 1s all;
+
+  width: 100%;
+  background-size: cover;
+}
+.imge-room a {
+  color: #fff;
+  width: 40%;
+  border-radius: 0%;
+  position: absolute;
+  bottom: 10px;
+  left: 30%;
+}
+.room-content a {
+  display: inline-block;
+  margin-top: 15px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 38px;
+  font-weight: 600;
+  color: #222;
+  margin-bottom: 0;
+}
+.room-content h5 {
+  font-size: 24px;
+  line-height: 28px;
+  color: #52c5fd;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+
+.imge-room:hover img {
+  transform: scale(1.2);
+}
+.facilitie{
+  background-image: linear-gradient(rgba(4, 9, 30, 0.8), rgba(4, 9, 30, 0.8)),url(../image/facilites_bg.jpg.webp);
+    background-size: cover;
+    height: 700px;
+}
+.facilitie .title h1 {
+  font-size: 36px;
+  line-height: 45px;
+  font-weight: 600;
+  color: #777;
+  
+}
+.facilitie .title{
+  margin-top: 50px !important;
+
+}
+.facilitie .title p {
+  font-size: 14px;
+  line-height: 30px;
+  color: #777;
+  margin-bottom: 0;
+}
+
+.icon-size{
+  font-size: 30px;
+}
+.facilitie-div{
+  background-color: rgba(249,249,255,.102);
+    border-radius: 10px;
+  border: 1px solid white;
+  
+}
+.facilitie-div h3{
+  font-size: 18px;
+    line-height: 38px;
+    font-weight: 600;
+    color: #222;
+    margin-bottom: 0;
+}
+
+
+
+@media screen and (max-width: 1024px) {
+  .headerbg {
+    height: 200vh;
+  }
+
+  .hedcontetnt {
+    margin-top: 20%;
+    position: absolute;
+  }
+  .facilitie{
+    height: 150vh;
+
+  }
+}
+@media screen and (max-width: 800px) {
+  
+  .facilitie{
+  height: 230vh;
+
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .headerbg {
+    height: 200vh;
+  }
+  .hedcontetnt {
+    margin-top: 40%;
+    position: absolute;
+    top: 10%;
+  }
+  .facilitie{
+  height: 230vh;
+
+  }
 }
