--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-
+body {
+  box-sizing: border-box;
+}
 .logo {
   width: 45%;
   margin-left: 15px;
@@ -160,7 +162,6 @@
   opacity: 0.9;
 }
 
-
 .room-section {
   margin-top: 100px;
 }
@@ -178,13 +179,10 @@
   margin-bottom: 0;
 }
 .imge-room {
-  /* padding-left: 20px 0px; */
   border-radius: 10px;
-
   position: relative;
   overflow: hidden;
 }
-
 
 .imge-room img {
   transition: 1s all;
@@ -221,21 +219,20 @@
 .imge-room:hover img {
   transform: scale(1.2);
 }
-.facilitie{
-  background-image: linear-gradient(rgba(4, 9, 30, 0.8), rgba(4, 9, 30, 0.8)),url(../image/facilites_bg.jpg.webp);
-    background-size: cover;
-    height: 700px;
+.facilitie {
+  background-image: linear-gradient(rgba(4, 9, 30, 0.8), rgba(4, 9, 30, 0.8)),
+    url(../image/facilites_bg.jpg.webp);
+  background-size: cover;
+  height: 700px;
 }
 .facilitie .title h1 {
   font-size: 36px;
   line-height: 45px;
   font-weight: 600;
   color: #777;
-  
 }
-.facilitie .title{
+.facilitie .title {
   margin-top: 50px !important;
-
 }
 .facilitie .title p {
   font-size: 14px;
@@ -244,24 +241,171 @@
   margin-bottom: 0;
 }
 
-.icon-size{
+.icon-size {
   font-size: 30px;
 }
-.facilitie-div{
-  background-color: rgba(249,249,255,.102);
-    border-radius: 10px;
+.facilitie-div {
+  background-color: rgba(249, 249, 255, 0.102);
+  border-radius: 10px;
   border: 1px solid white;
-  
 }
-.facilitie-div h3{
+.facilitie-div h3 {
   font-size: 18px;
-    line-height: 38px;
-    font-weight: 600;
-    color: #222;
-    margin-bottom: 0;
+  line-height: 38px;
+  font-weight: 600;
+  color: #222;
+  margin-bottom: 0;
+}
+.about-section {
+  margin: auto;
+  margin-top: 7%;
+}
+.about-section h2 {
+  font-size: 36px;
+  line-height: 45px;
+  font-weight: 600;
+}
+.about-section a {
+  display: inline-block;
+  text-decoration: none;
+  border-radius: 0%;
+  font-size: 14px;
+  line-height: 30px;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 600;
+  background: #222;
+  padding: 5px 30px;
+}
+.der::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #f8b100;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
 }
 
+.contant-about {
+  padding-top: 7%;
+}
 
+.contant-about p {
+  padding-top: 40px;
+}
+
+.contant-about a {
+  margin-top: 30px;
+}
+.testimonial {
+  margin-top: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+
+  background-color: #f9f9ff;
+}
+.testimonial .title h1 {
+  font-size: 36px;
+  line-height: 45px;
+  font-weight: 600;
+  color: #222222;
+}
+
+.testimonial-div a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 800;
+  transition: 0.2s all;
+}
+.testimonial-div a:hover {
+  color: #52c5fd;
+}
+.testimonial .title p {
+  font-size: 14px;
+  line-height: 30px;
+  color: #777;
+  margin-bottom: 0;
+}
+
+.testimonial-div img {
+  width: 100px;
+  height: 100px;
+  margin-right: 30px;
+}
+
+.latest-section {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.latest-section .title h1 {
+  font-size: 36px;
+  line-height: 45px;
+  font-weight: 600;
+  color: #222222;
+}
+
+.latest-section .title p {
+  font-size: 14px;
+  line-height: 30px;
+  color: #777;
+  margin-bottom: 0;
+}
+
+.card-title a {
+  border: 0.5px solid black;
+  border-color: #e7e7e7;
+  text-decoration: none;
+  border-radius: 0%;
+  font-size: 14px;
+  line-height: 30px;
+  color: #000;
+  background: #fff;
+  padding: 0px 15px;
+}
+.card-title a:hover {
+  color: #000;
+}
+.sub-title {
+  display: inline-block;
+  text-decoration: none;
+  text-decoration: none;
+  color: #000;
+
+  font-weight: 800;
+  transition: 0.2s all;
+  padding: 10px 0px;
+}
+.content-latest {
+  border-radius: 0px;
+}
+
+.content-latest:hover img {
+  transform: scale(1.3) rotate(13deg);
+}
+.content-latest img {
+  border-radius: 0px;
+  overflow: hidden;
+  transition: 2s all;
+}
+.latest-section .card-group .card {
+  border: none;
+}
+.card-foter {
+  color: #777;
+}
 
 @media screen and (max-width: 1024px) {
   .headerbg {
@@ -272,16 +416,13 @@
     margin-top: 20%;
     position: absolute;
   }
-  .facilitie{
+  .facilitie {
     height: 150vh;
-
   }
 }
 @media screen and (max-width: 800px) {
-  
-  .facilitie{
-  height: 230vh;
-
+  .facilitie {
+    height: 230vh;
   }
 }
 
@@ -294,8 +435,7 @@
     position: absolute;
     top: 10%;
   }
-  .facilitie{
-  height: 230vh;
-
+  .facilitie {
+    height: 230vh;
   }
 }
